# rust-auth-example

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.js  webpack.config.cjs
assets/: main.js  style.css
assets/css/: style.css
assets/fonts/: font.css
assets/js/: main.js
migrations/: 20231026000143_create_users_table.sql
public/: bundle.js  script-3334226.js  script-5124f27.js  script-b51406f.js  script-e83bed44493741d5657c.js  style-3334226.css  style-5124f27.css  style-e83bed44493741d5657c.css
rest/: users.http
src/: filters.rs  lib.rs  main.rs  middlewares.rs  routes.rs  validation.rs
src/assets/css/: style.css
src/assets/js/: main.js
src/controllers/: users_controller.rs
src/handlers/: main_handler.rs  mod.rs  user_handler.rs  users_handler.rs
src/models/: user.rs  user_model.rs
templates/: base.html  guest.html  index.html
templates/partials/: flash.html  guest-nav.html  nav.html
templates/users/: signin.html  signup.html  user.html  users.html
