[package]
name = "rustpress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
askama = { version = "0.12.1", features = ["serde_json"] }
axum = { version = "0.7.1", features = ["macros"] }
axum-flash = "0.8.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.10.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls","time","uuid"] }
time = { version = "0.3.30", features = ["serde","macros","formatting"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-sessions = { version = "0.7.0", features = ["redis-store"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }


